manifests/overlays/stage/nap-dotnetcorewebapp-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nap-dotnetcorewebapp
spec:
  template:
    spec:
      containers:
        - name: nap-dotnetcorewebapp
